# game-engine

./: .gitignore  .gitmodules  .temp  CMakeLists.txt  Component.cpp  Component.h  Game-Engine.cbp  Game-Engine.depend  Game-Engine.layout  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  Shader.h  Shaderinclude.h  Transform.cpp  Transform.h  _serialize.cpp  _serialize.h  ammo.gop  array_heap.h  array_heap.scratch.txt  assest-backup.yaml  assetManager.h  assets.ass  assets.lvl  assets.yaml  audio.cpp  audio.h  ball.gop  boostSerilize.cpp  boostSerilize.h  cUBES.yaml  camera.cpp  camera.h  collision.cpp  collision.h  (+112 more)
_rendering/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  _model.cpp  _model.h  _renderMeta.cpp  _renderMeta.h  _renderer.cpp  _renderer.h  _shader.cpp  _shader.h  batchManager.h  batchMananger.cpp  camera.cpp  camera.h  gpu_sort.h  gpu_vector.cpp  gpu_vector.h  renderTexture.h  texture.cpp  texture.h
builder/: game.cpp
bullet/: CMakeLists.txt
bullet/build3/gmake/: App_BulletExampleBrowser.make  App_HelloBulletRobotics.make  App_HelloWorld.make  App_PhysicsServerSharedMemoryBridgeTCP.make  App_PhysicsServerSharedMemoryBridgeUDP.make  App_PhysicsServerTCP.make  App_PhysicsServerUDP.make  App_PhysicsServer_SharedMemory.make  App_PhysicsServer_SharedMemory_GUI.make  App_RobotSimulator.make  App_SimpleOpenGL3.make  App_obj2sdf.make  Bullet2FileLoader.make  Bullet3Collision.make  Bullet3Common.make  Bullet3Dynamics.make  Bullet3Geometry.make  Bullet3OpenCL_clew.make  BulletCollision.make  BulletDynamics.make  BulletExampleBrowserLib.make  BulletFileLoader.make  BulletInverseDynamics.make  BulletInverseDynamicsUtils.make  BulletRobotics.make  BulletSoftBody.make  BulletWorldImporter.make  BulletXmlWorldImporter.make  BussIK.make  ConvexDecomposition.make  HACD.make  LinearMath.make  Makefile  OpenGL_Window.make  Test_BulletCollision.make  Test_BulletDynamics.make  Test_Gwen_OpenGL.make  Test_InverseDynamicsJacobian.make  Test_InverseDynamicsKinematics.make  Test_InverseForwardDynamics.make  (+19 more)
bullet/src/LinearMath/: btThreads.cpp
components/: Component.cpp  Component.h  game_object.cpp  game_object.h
imgui/: _CMakeLists.txt  imgui.cpp
lighting/: lighting.cpp  lighting.h
main/: main.cpp
old/: Game-Engine.cbp  boostSerilize.h  codeGen.py  demofile.txt  game_engine.h  game_object.cpp  gui.h  level1.h  main.cpp  scratchwork  temp  terrain.cpp  terrain.h
old/components/: Component.cpp
old/physics/: collision.cpp  physics.h
old/rendering/: camera.cpp  camera.h  renderTexture.h  rendering.cpp  rendering.h  renderthread.cpp  renderthread.h
particles/: emitter.cpp  emitter.h  emitter_protoype.cpp  emitter_protoype.h  gradient.cpp  gradient.h  particles.cpp  particles.h
physics/: collision.cpp  collision.h  physics.cpp  physics.h  physics_.cpp  physics_.h
res/images/.comments/: grass.jpg.xml
res/shaders/: billboard.vert  copy.comp  defLighting.frag  defferedLighting.frag  defferedLighting.vert  directional_shadow_map.vert  io.glsl  lamp.frag  lamp.vert  light.glsl  line.frag  line.geom  line_box.geom  mat.comp  model.frag  model.vert  model_no_inst.vert  modelv.vert  octree.comp  omni_shadow_map.frag  omni_shadow_map.geom  omni_shadow_map.vert  particle-compiled.glsl  particle.glsl  particleUpdate-compiled.comp  particleUpdate.comp  particleUpdate_.comp  particleUpdate_burst.comp  particleUpdate_emitter.comp  particle_sort-compiled.comp  particle_sort.comp  particle_sort2.comp  particle_sort_1.comp  particle_sort_2.comp  particles.frag  particles.geom  particles.vert  red.frag  renderParticle.comp  sort.glsl  (+14 more)
res/shaders/particles/: particle.glsl  particleUpdate_.comp  particleUpdate_burst.comp  particleUpdate_emitter.comp  particle_sort_1.comp  particle_sort_2.comp  particles.frag  particles.geom  renderParticle.comp
res/shaders/terrainShader/: terrain.frag  terrain.geom  terrain.tesc  terrain.tese  terrain.vert
test_project/: assests2.yaml  bullet_test.yaml  particle_test.cpp  physics_test.cpp  physics_test.yaml  physics_test2.yaml  test_stuff.cpp
